--- a/Lets-read/index.html
+++ b/Lets-read/index.html
@@ -4,48 +4,185 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Recommendations</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Fredoka+One&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Poppins', sans-serif;
             max-width: 800px;
             margin: 0 auto;
             padding: 20px;
-            background-color: #f5f5f5;
+            background: #0a1929;
+            color: #ffffff;
         }
-        .preferences {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
+
+        h1, h2 {
+            font-family: 'Fredoka One', cursive;
+            text-align: center;
+            letter-spacing: 1px;
         }
-        .recommendations {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        .book {
-            border-bottom: 1px solid #eee;
+
+        h1 {
+            font-size: 3em;
+            margin-bottom: 30px;
+            background: linear-gradient(45deg, #FF6B6B, #4ECDC4, #45B7D1, #96E6A1);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.2);
             padding: 10px 0;
+            animation: titleGradient 6s ease infinite;
+            background-size: 300% 300%;
         }
+
+        @keyframes titleGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        h2 {
+            font-size: 2.2em;
+            margin-bottom: 20px;
+            color: #FF6B6B;
+            text-shadow: 2px 2px 4px rgba(255, 107, 107, 0.3);
+        }
+
+        .preferences {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 25px;
+            border-radius: 20px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            margin-bottom: 25px;
+            border: 3px solid #4ECDC4;
+            backdrop-filter: blur(4px);
+        }
+
+        .recommendations {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 25px;
+            border-radius: 20px;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+            border: 3px solid #45B7D1;
+            backdrop-filter: blur(4px);
+        }
+
+        .book {
+            border-bottom: 3px solid rgba(78, 205, 196, 0.3);
+            padding: 20px;
+            margin: 10px 0;
+            transition: all 0.3s ease;
+            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.05);
+        }
+
+        .book:hover {
+            transform: translateX(10px) translateY(-5px);
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+            background: rgba(255, 255, 255, 0.1);
+            border-left: 5px solid #4ECDC4;
+        }
+
         .book:last-child {
             border-bottom: none;
         }
+
         select[multiple] {
             width: 100%;
             height: 100px;
+            border: 3px solid #45B7D1;
+            border-radius: 12px;
+            padding: 8px;
+            margin-bottom: 15px;
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            transition: all 0.3s ease;
         }
+
+        select[multiple] option {
+            background: #0a1929;
+            color: white;
+            padding: 8px;
+        }
+
+        select[multiple]:focus {
+            border-color: #FF6B6B;
+            box-shadow: 0 0 15px rgba(255, 107, 107, 0.3);
+        }
+
+        input[type="number"] {
+            width: 150px;
+            padding: 12px;
+            border: 3px solid #45B7D1;
+            border-radius: 12px;
+            margin: 5px 10px 15px 0;
+            background: rgba(255, 255, 255, 0.1);
+            color: white;
+            transition: all 0.3s ease;
+        }
+
+        input[type="number"]:focus {
+            border-color: #FF6B6B;
+            box-shadow: 0 0 15px rgba(255, 107, 107, 0.3);
+        }
+
         button {
-            background-color: #007bff;
+            background: linear-gradient(45deg, #FF6B6B, #FF8E53);
             color: white;
             border: none;
-            padding: 10px 20px;
-            border-radius: 4px;
+            padding: 15px 30px;
+            border-radius: 12px;
             cursor: pointer;
+            font-family: 'Fredoka One', cursive;
+            font-size: 1.1em;
+            transition: all 0.3s ease;
+            box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3);
         }
+
         button:hover {
-            background-color: #0056b3;
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(255, 107, 107, 0.5);
+            background: linear-gradient(45deg, #FF8E53, #FF6B6B);
+        }
+
+        label {
+            color: #ffffff;
+            font-weight: 600;
+            display: block;
+            margin-bottom: 8px;
+            font-size: 1.1em;
+        }
+
+        .book h3 {
+            color: #FF6B6B;
+            margin: 0 0 15px 0;
+            font-family: 'Fredoka One', cursive;
+            font-size: 1.6em;
+            text-shadow: 1px 1px 2px rgba(255, 107, 107, 0.2);
+        }
+
+        .book p {
+            margin: 8px 0;
+            color: #ffffff;
+            font-size: 1.05em;
+            line-height: 1.4;
+        }
+
+        .book p strong {
+            color: #45B7D1;
+            font-weight: 600;
+        }
+
+        /* Rainbow loading animation for fetch operations */
+        @keyframes rainbow {
+            0% { border-color: #FF6B6B; }
+            25% { border-color: #4ECDC4; }
+            50% { border-color: #45B7D1; }
+            75% { border-color: #96E6A1; }
+            100% { border-color: #FF6B6B; }
+        }
+
+        .loading {
+            border: 4px solid;
+            animation: rainbow 2s linear infinite;
         }
     </style>
 </head>
